# MarchingNumPy

./: .gitignore  .readthedocs.yml  LICENSE  README.rst  __init__.py  pyproject.toml  requirements.txt
MarchingCuPy/: Checking.py  ConvertIndexes.py  FindIntersects.py  IndexingTools.py  LookUpGeometry.py  Marching.py  MarchingCubesLorensen.py  MarchingSquares.py  MarchingTriangles.py  ResolveAmbiguous.py  Types.py  VolumeTypes.py  __init__.py
MarchingNumPy/: FindIntersects.py  IndexingTools.py  LookUpGeometry.py  Marching.py  MarchingCubesLorensen.py  MarchingSquares.py  MarchingTriangles.py  ResolveAmbiguous.py  VolumeTypes.py  __init__.py
MarchingNumpy/: Checking.py  LookUpGeometry.py  Marching.py  MarchingSquares.py  ResolveAmbiguous.py  Types.py
docs/source/: Background.rst  Marching.rst  MarchingCuPy.rst  conf.py  index.rst
examples/: marching_squares_example.py
videos/Video01/: LorensenLookUpTable.py  MarchingBasic.py
videos/Video02/: MarchingNumpy.py  MarchingProfile.py
